--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "prettify": "prettier --write \"**/*.{ts,tsx}\""
   },
   "devDependencies": {
     "eslint-config-custom": "*",
