--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "eslint-config-custom",
-  "version": "0.0.0",
+  "name": "eslint-config",
+  "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "files": [
+    "base-eslint-preset.js"
+  ],
   "dependencies": {
+    "@types/eslint": "^8.4.10",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^7.23.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-next": "13.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.31.8",
-    "eslint-config-turbo": "latest"
+    "eslint-config-turbo": "latest",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "devDependencies": {
     "typescript": "^4.7.4"
