--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev --parallel",
-    "lint": "turbo run lint",
-    "prettify": "prettier --write \"**/*.{ts,tsx}\""
+    "prettify": "cd ./packages/%npm_config_path% && prettier --write \"**/*.{ts,tsx}\""
   },
   "devDependencies": {
     "eslint-config-custom": "*",
